project dandelion band scrolling update

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kito Lee Son</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <script>
-      /* 
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Kito Lee Son</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<script>
+			/* 
       // initialize success, error, and options variables
       const geo_onSuccess = async (position) => {
         const lat = position.coords.latitude;
@@ -39,23 +41,20 @@
         );
       } else console.log('geolocation not available');
       */
-    </script>
-    <h1>kito lee son</h1>
-    <div class="link-container">
-      <a href="/">home</a>
-      <a href="/trinidad_blog">blog</a>
-      <a href="/project_dandelion">project dandelion</a>
-      <a href="/musical_works">musical works</a>
-    </div>
-    <p>
-      my name is kito lee son. welcome to my webpage. a collection of the
-      highlights of many different aspects of my life including: my travels, my
-      projects, my stories and much more. this page will continue to grow with
-      me. to be honest, i don't have much of a plan here. i simply have an array
-      of ideas for which i thought it would be useful to condense them into one
-      space in order to more easily share and keep track of them. i hope you
-      enjoy what you find.
-      <span class="trickster"></span>
-    </p>
-  </body>
+		</script>
+		<h1>kito lee son</h1>
+		<div class="link-container">
+			<a href="/">home</a>
+			<a href="/trinidad_blog">blog</a>
+			<a href="/project_dandelion">project dandelion</a>
+			<a href="/musical_works">musical works</a>
+		</div>
+		<p>
+			my name is kito lee son. welcome to my webpage. a collection of the highlights of many different aspects of my
+			life including: my travels, my projects, my stories and much more. this page will continue to grow with me. to be
+			honest, i don't have much of a plan here. i simply have an array of ideas for which i thought it would be useful
+			to condense them into one space in order to more easily share and keep track of them. i hope you enjoy what you
+			find.
+		</p>
+	</body>
 </html>
