musical works coming soon page

--- a/public/musical_works/index.html
+++ b/public/musical_works/index.html
@@ -1,23 +1,29 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Musical Works</title>
-  </head>
-  <body>
-    <h1>Musical Works</h1>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Musical Works</title>
+	</head>
+	<body>
+		<h1 style="color: black">Musical Works</h1>
 
-    <div class="link-container">
-      <a href="/">home</a>
-      <a href="/trinidad_blog">blog</a>
-      <a href="/project_dandelion">project dandelion</a>
-      <a href="/musical_works">musical works</a>
-    </div>
+		<div class="link-container">
+			<a href="/">home</a>
+			<a href="/trinidad_blog">blog</a>
+			<a href="/project_dandelion">project dandelion</a>
+			<a href="/musical_works">musical works</a>
+		</div>
 
-    <div class="link-subcontainer">
-      <a href="fire_down_below">fire down below</a>
-    </div>
-  </body>
+		<p>page coming soon..</p>
+
+		<!-- make a link for each work -->
+		<!-- each page will hold description, videos, musescore files, pdfs, audio, etc -->
+		<!-- <div class="link-subcontainer">
+			<a href="fire_down_below">fire down below</a>
+		</div> -->
+	</body>
 </html>
